02-alb-ingress-acm/echoserver2.yaml
apiVersion: v1
kind: Service
metadata:
  name: echoserver2
  namespace: echoserver
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app: echoserver2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoserver2
  namespace: echoserver
spec:
  selector:
    matchLabels:
      app: echoserver2
  replicas: 1
  template:
    metadata:
      labels:
        app: echoserver2
    spec:
      containers:
      - image: k8s.gcr.io/e2e-test-images/echoserver:2.5
        imagePullPolicy: Always
        name: echoserver
        ports:
        - containerPort: 8080
