02-alb-ingress-acm/echoserver-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echoserver
  namespace: echoserver
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/tags: Environment=dev,Team=test
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-2:472354598015:certificate/7f3bd8ff-6f56-499c-a4f1-d48de4e01c1b
spec:
  ingressClassName: alb
  rules:
    - host: echoserver1.saguaro.caktustest.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: echoserver1
                port:
                  number: 80
    - host: echoserver2.saguaro.caktustest.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: echoserver2
                port:
                  number: 80
  tls:
  - hosts:
      - echoserver1.saguaro.caktustest.net
      - echoserver2.saguaro.caktustest.net
    secretName: "echoserver-tls"
